tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint64_4_random_one_more/serialized.ssz
ÊL0÷+fjF„Wû{ÿ„ÕŞddf:^Ù&C¾		³uü—v